# zed-en-es-translator

./: .coderabbit.yaml  .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  deny.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  marketplace-package.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
crates/translator-cli/: Cargo.toml
crates/translator-cli/src/: main.rs
crates/translator-cli/tests/: cli_argv_privacy.rs  cli_contract.rs  cli_embedded_provider.rs  cli_exit_and_stderr.rs  cli_malformed_json.rs  cli_operational_providers.rs  cli_provider_configuration.rs  cli_provider_failures.rs  cli_remote_confirmation.rs  cli_stdout_success_contract.rs  cli_utf8.rs
crates/translator-cli/tests/common/: mod.rs
crates/translator-core/: Cargo.toml
crates/translator-core/src/: azure_translator.rs  contract.rs  embedded_process.rs  embedded_protocol.rs  embedded_provider.rs  errors.rs  lib.rs  libretranslate.rs  limits.rs  markdown.rs  privacy.rs  provider.rs  provider_config.rs  redaction.rs  secrets.rs  workspace.rs
crates/translator-core/tests/: ambiguous_content.rs  azure_translator_failures.rs  azure_translator_provider.rs  contract_serialization.rs  contract_utf8.rs  direct_text.rs  direct_text_errors.rs  direct_text_limits.rs  document_snapshot.rs  embedded_provider.rs  embedded_provider_configuration.rs  embedded_provider_redaction.rs  embedded_runner_boundary.rs  error_codes.rs  error_redaction_matrix.rs  file_encoding_attacks.rs  file_validation.rs  json_schema_contract_examples.rs  libretranslate_provider.rs  libretranslate_provider_failures.rs  limits.rs  local_provider_translation.rs  markdown_preservation.rs  markdown_tricky_preservation.rs  mock_provider.rs  no_source_file_mutation.rs  no_translatable_segments.rs  operational_provider_configuration.rs  operational_provider_redaction.rs  prompt_injection_text.rs  provider_configuration.rs  provider_configuration_contract.rs  provider_diagnostics_redaction.rs  provider_failure_privacy.rs  provider_failures.rs  provider_output_limits.rs  provider_request_privacy.rs  provider_timeout.rs  remote_provider_denial.rs  secret_detection_remote_gate.rs  (+6 more)
crates/translator-core/tests/common/: mod.rs
crates/translator-lsp/: Cargo.toml
crates/translator-lsp/src/: lib.rs  main.rs  protocol.rs  selection.rs  state.rs
crates/translator-lsp/tests/: code_action.rs  direct_translation.rs  document_markdown.rs  document_preview.rs  document_safety.rs  document_state.rs  embedded_provider_locality.rs  failure_redaction.rs  lifecycle.rs  marketplace_embedded.rs  operational_provider_locality.rs  provider_state.rs  remote_confirmation.rs  remote_privacy.rs  selection_positions.rs  selection_preview.rs
crates/translator-lsp/tests/common/: mod.rs
crates/translator-mcp/: Cargo.toml
crates/translator-mcp/src/: lib.rs  main.rs  protocol.rs  tools.rs
crates/translator-mcp/tests/: mcp_file_attacks.rs  mcp_markdown_preservation.rs  mcp_privacy.rs  mcp_protocol_errors.rs  mcp_provider_configuration.rs  mcp_provider_failures.rs  mcp_remote_confirmation.rs  mcp_remote_denial.rs  mcp_result_contract.rs  mcp_schema_contract.rs  mcp_server_lifecycle.rs  mcp_session_recovery.rs  mcp_tool_discovery.rs  mcp_translate_file.rs  mcp_translate_file_errors.rs  mcp_translate_text.rs  mcp_translate_text_errors.rs
crates/translator-mcp/tests/common/: mod.rs
crates/translator-provider-manager/: Cargo.toml
crates/translator-provider-manager/src/: acquisition.rs  artifact.rs  cleanup.rs  cli.rs  disclosure.rs  error.rs  lib.rs  lifecycle.rs  locking.rs  main.rs  manifest.rs  state.rs  status.rs  storage.rs
crates/translator-provider-manager/tests/: acquisition_policy.rs  artifact_integrity.rs  cleanup.rs  concurrency.rs  disclosure.rs  manifest_contract.rs  prepare_lifecycle.rs  state_contract.rs  status_verify.rs  storage_security.rs  update_rollback.rs
crates/translator-provider-manager/tests/common/: mod.rs
docker/: rust-toolchain.Dockerfile
docs/: PLAN.md  decisions.md  deployment.md  diagrams.md  feature-map.md  product.md  zed-ux-flow.md
docs/adr/: 0001-zed-extension-scope.md  0002-architecture-and-technology.md  0003-mcp-server-rust-rmcp.md  0004-direct-zed-lsp-workflow.md  0005-operational-provider-pair.md  0006-embedded-bergamot-provider.md  0006-zed-marketplace-package.md  0007-repository-convergence.md
docs/research/: provider-contract.md  security-runtime-controls.md  supported-files-and-comments.md  zed-spec-kit-repo-structure.md
native/translator-embedded-runtime/: CMakeLists.txt  README.md
native/translator-embedded-runtime/src/: main.cpp
native/translator-embedded-runtime/tests/: runner_contract.sh
ops/marketplace/: README.md  build-recipe.txt  model.lock.json  package.lock.json  source.lock.json  zed-source.lock.json
scripts/cleanup/: generated.sh
scripts/marketplace/: build-package.sh  fetch-native-source.sh  prepare-real-package.sh  validate-package.sh
scripts/providers/: embedded-cxx  embedded.sh  fetch-embedded-source.sh  libretranslate.sh
scripts/worktrees/: audit.sh  check-storage.sh
scripts/zed-extension/: prepare-direct.sh  prepare.sh
specs/001-translation-core-contract/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-mcp-server/: plan.md  (+5 more)
zed-extension/: Cargo.toml  LICENSE  extension.toml
zed-extension/src/: acquisition.rs  diagnostics.rs  launch.rs  lib.rs  package.rs  settings.rs
zed-extension/tests/: acquisition_concurrency.rs  acquisition_failures.rs  acquisition_happy_path.rs  acquisition_rollback.rs  diagnostics_redaction.rs  direct_lsp.rs  embedded_provider_settings.rs  extension_manifest.rs  launch_profile.rs  package_lock.rs  package_state.rs  provider_settings.rs  unsupported_platform.rs
zed-extension/tests/common/: mod.rs
(+182 files in other folders)
