[workspace]
members = [
    "crates/translator-core",
    "crates/translator-cli",
    "crates/translator-mcp",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
publish = false

[workspace.lints.rust]
future-incompatible = "warn"
nonstandard-style = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
