[package]
name = "translator-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "translator-cli"
path = "src/main.rs"

[dependencies]
translator-core = { path = "../translator-core" }

[dev-dependencies]
fs4 = "1.1"
sha2 = "0.11"

[lints]
workspace = true
