[package]
name = "translator-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "3.3", features = ["json"] }

[lints]
workspace = true
