[package]
name = "translator-lsp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "translator-lsp"
path = "src/main.rs"

[dependencies]
lsp-server = "0.10.0"
lsp-types = "0.97.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
translator-core = { path = "../translator-core" }
url = "2.5"

[lints]
workspace = true
