[package]
name = "translator-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "translator-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "2.1.0", features = ["transport-io"] }
schemars = { version = "1.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["io-std", "io-util", "macros", "process", "rt-multi-thread", "signal", "time"] }
translator-core = { path = "../translator-core" }

[lints]
workspace = true
